moved side bar into main bar

--- a/porfolio.html
+++ b/porfolio.html
@@ -13,6 +13,12 @@
             <a id="top"></a>
             <nav class='navbar'>
                 <h1 class='nav-name'>Marc Ferraro</h1>
+                <div class='table-of-contents'>
+                    <a href='#bio'><p>About Me</p></a>
+                    <a href='#technologies'><p>Technologies</p></a>
+                    <a href='#demos'><p>Demos</p></a>
+                    <a href='#blogs'><p>Blogs</p></a>
+                </div>
                 <span class='nav-links-container'>
                     <a class='nav-links' href='https://github.com/marcferraro?tab=repositories'>GitHub</a>
                     <span>/</span>
@@ -21,7 +27,7 @@
                     <a class='nav-links' href='https://marc-ferraro.medium.com/'>Medium</a>
                 </span>
             </nav>
-            <nav class='side-bar'>
+            <!-- <nav class='side-bar'>
                 <div class='side-bar-links'>
                     <a href='#bio'><p>About Me</p></a>
                     <a href='#technologies'><p>Technologies</p></a>
@@ -31,7 +37,7 @@
                     <p>CV</p>
                     <a href='#top'><p>⬆</p></a>
                 </div>
-            </nav>
+            </nav> -->
         <!-- </header> -->
         <div class='content-container'>
             <section id='intro' class='intro'>
@@ -45,7 +51,7 @@
                     <div class='grid-3-columns'>
                         <div class='blurb'>
                             <p>
-                                Web Developer with roots in dance and dance instruction. Lifelong collaborator. I bring a creative approach to code.
+                                Web Developer with roots in dance, dance instruction, and performance. Lifelong collaborator. I bring a creative approach to code.
                             </p>
                         </div>
                     </div>
