--- a/porfolio.html
+++ b/porfolio.html
@@ -49,9 +49,12 @@
                 <div class='bio'>
                     <img class='profile-pic' src='Ivy Profile.jpg' alt='A portrait of Marc Ferraro, smiling in front of a background of ivy.'/>
                     <div class='grid-3-columns'>
-                        <div class='blurb'>
-                            <p>
+                        <div class='blurb-container'>
+                            <p class='blurb-intro'>
                                 Web Developer with roots in dance, dance instruction, and performance. Lifelong collaborator. I bring a creative approach to code.
+                            </p>
+                            <p class='blurb'>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus non laoreet ipsum. In hac habitasse platea dictumst. Donec facilisis semper dapibus. Fusce in dolor purus.
                             </p>
                         </div>
                     </div>
