--- a/porfolio.html
+++ b/porfolio.html
@@ -65,29 +65,29 @@
                 <h2 class='section-header'><p class='pitch-comment'>// </p>Technologies</h2>
                 <div class='tech-list-wrapper'>
                     <div class='my-stack'>
-                        <h2>My Stack</h2>
-                        <ul>
-                            <li>React</li>
-                            <li>Redux</li>
-                            <li>JavaScript</li>
-                            <li>Ruby on Rails</li>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>Amazon S3</li>
-                            <li>Material UI</li>
-                            <li>Bootstrap</li>
-                            <li>Sinatra</li>
-                            <li>Git</li>
-                            <li>SQL</li>
-                        </ul>
+                        <h2><p class='pitch-comment'>// </p>My Stack</h2>
+                        <div class='tech-container'>
+                            <a><p>React</p></a>
+                            <a><p>Redux</p></a>
+                            <a><p>JavaScript</p></a>
+                            <a><p>Ruby on Rails</p></a>
+                            <a><p>HTML</p></a>
+                            <a><p>CSS</p></a>
+                            <a><p>Amazon S3</p></a>
+                            <a><p>Material UI</p></a>
+                            <a><p>Bootstrap</p></a>
+                            <a><p>Sinatra</p></a>
+                            <a><p>Git</p></a>
+                            <a><p>SQL</p></a>
+                        </div>
+                        <h2><p class='pitch-comment'>// </p>Currently Learning:</h2>
+                        <div class='tech-container'>
+                            <a><p>Python</p></a>
+                            <a><p>Flask</p></a>
+                        </div>
                     </div>
-                    <div class='currently-learning'>
-                        <h2>Currently Learning:</h2>
-                        <ul>
-                            <li>Python</li>
-                            <li>Flask</li>
-                        </ul>
-                    </div>
+                    <!-- <div class='currently-learning'>
+                    </div> -->
                 </div>
             </section>
 
