bio draft finished and nav bar spacing

--- a/porfolio.html
+++ b/porfolio.html
@@ -51,10 +51,12 @@
                     <div class='grid-3-columns'>
                         <div class='blurb-container'>
                             <p class='blurb-intro'>
-                                Web Developer with roots in dance, dance instruction, and performance. Lifelong collaborator. I bring a creative approach to code.
+                                Web Developer with roots in dance, dance instruction, and performance. Lifelong collaborator. I bring an artist's eye to code.
                             </p>
                             <p class='blurb'>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus non laoreet ipsum. In hac habitasse platea dictumst. Donec facilisis semper dapibus. Fusce in dolor purus.
+                                Before I was a coder, I was a dancer. I’ve taught movement to a wide range of ages and skill levels, 
+                                and choreographed dances performed in theaters, on street corners, and in lakes. While coding this manifests as 
+                                a teacher's ability to communicate and a creative's ability to innovate.
                             </p>
                         </div>
                     </div>
