navbar table of contents styling

--- a/porfolio.html
+++ b/porfolio.html
@@ -15,8 +15,11 @@
                 <h1 class='nav-name'>Marc Ferraro</h1>
                 <div class='table-of-contents'>
                     <a href='#bio'><p>About Me</p></a>
+                    <span>/</span>
                     <a href='#technologies'><p>Technologies</p></a>
+                    <span>/</span>
                     <a href='#demos'><p>Demos</p></a>
+                    <span>/</span>
                     <a href='#blogs'><p>Blogs</p></a>
                 </div>
                 <span class='nav-links-container'>
@@ -67,7 +70,7 @@
                 <h2 class='section-header'><p class='pitch-comment'>// </p>Technologies</h2>
                 <div class='tech-list-wrapper'>
                     <div class='my-stack'>
-                        <h2><p class='pitch-comment'>// </p>My Stack</h2>
+                        <h2><p class='pitch-comment'>// </p>My Stack:</h2>
                         <div class='tech-container'>
                             <a><p>React</p></a>
                             <a><p>Redux</p></a>
