blogs switched to blog, shadow added to blog section

--- a/porfolio.html
+++ b/porfolio.html
@@ -20,7 +20,7 @@
                     <span>/</span>
                     <a href='#demos'><p>Demos</p></a>
                     <span>/</span>
-                    <a href='#blogs'><p>Blogs</p></a>
+                    <a href='#blog'><p>Blog</p></a>
                 </div>
                 <span class='nav-links-container'>
                     <a class='nav-links' href='https://github.com/marcferraro?tab=repositories'>GitHub</a>
@@ -106,7 +106,7 @@
                 </div>
             </section>
 
-            <section id='blogs' class='blogs'>
+            <section id='blog' class='blog'>
                 <h2 class='section-header'><p class='pitch-comment'>// </p>Blog</h2>
                 <div class='blog-container'>
                     <a href='https://medium.com/codex/win-all-your-arguments-with-rubys-splat-operator-86ad8001bcb1'>
