nav-name pop in fix

--- a/porfolio.html
+++ b/porfolio.html
@@ -12,7 +12,7 @@
         <!-- <header> -->
             <a id="top"></a>
             <nav class='navbar'>
-                <a href='#top'><h1 class='nav-name'>Marc Ferraro</h1></a>
+                <a class='nav-name-return' href='#top'><h1 class='nav-name'>Marc Ferraro</h1></a>
                 <div class='table-of-contents'>
                     <a href='#bio'><p>About Me</p></a>
                     <span>/</span>
