--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
         <link rel='stylesheet' href='engineering.css'>
     </head>
     <body>
-        <!-- <header> -->
+        <header>
             <a id="top"></a>
             <nav class='navbar'>
                 <a class='nav-name-return' href='#top'><h1 class='nav-name'>Marc Ferraro</h1></a>
@@ -41,7 +41,7 @@
                     <a href='#top'><p>⬆</p></a>
                 </div>
             </nav> -->
-        <!-- </header> -->
+        </header>
         <div class='content-container'>
             <section id='intro' class='intro'>
                 <h1 class='pitch'><p class='pitch-comment'>// </p>Hi, I'm Marc Ferraro, <br> <p class='pitch-comment'>// </p>a software engineer <br> <p class='pitch-comment'>// </p>and dance artist <br> <p class='pitch-comment'>// </p> based in Chicago. <span class='blinking-cursor'>|</span></h1>
