--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                     <a href='#demos'><p>Demos</p></a>
                     <span>/</span>
                     <a href='#blog'><p>Blog</p></a>
+                    <span>/</span>
+                    <a href='Ferraro Resume.pdf' download><p>Resume</p></a>
                 </div>
                 <span class='nav-links-container'>
                     <a class='nav-links' href='https://github.com/marcferraro?tab=repositories'>GitHub</a>
@@ -36,7 +38,6 @@
                     <a href='#technologies'><p>Technologies</p></a>
                     <a href='#demos'><p>Demos</p></a>
                     <a href='#blogs'><p>Blogs</p></a>
-                    <a href='Ferraro Resume.pdf' download><p>Resume</p></a>
                     <p>CV</p>
                     <a href='#top'><p>⬆</p></a>
                 </div>
