cover letter added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                     <a href='#blog'><p>Blog</p></a>
                     <span>/</span>
                     <a href='Ferraro Resume.pdf' download><p>Resume</p></a>
+                    <span>/</span>
+                    <a href='Ferraro CV.pdf' download><p>CV</p></a>
                 </div>
                 <span class='nav-links-container'>
                     <a class='nav-links' href='https://github.com/marcferraro?tab=repositories'>GitHub</a>
