--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@
                     </a>
                 </div>
             </section>
+            <footer>
+                    <p>© Marc Ferraro 2021</p>
+                    <a href = "mailto: marc.ferraro1@gmail.com"><p>marc.ferraro1@gmail.com</p></a>
+                    <p>This website is built with just HTML and CSS!</p>
+            </footer>
         </div>
     </body>
 </html>
